--- a/src/App.css
+++ b/src/App.css
@@ -2,45 +2,128 @@
 
 .overlay {
   position: fixed;
+  display: flex;
+  justify-content: center;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.1); /* semi-transparent black */
+  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent black */
   transition: opacity 0.3s ease, visibility 0.3s ease;
   z-index: 1;
+  overflow: hidden;
+}
+
+.cover{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal {
-  width:400px;
-  height: auto;
+  width: 450px;
+  height: 600px;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   background-color: white;
-  padding: 5px;
-  border-radius: 5px;
-  z-index: 2;
-  animation: fadeIn 0.3s ease forwards;
+  z-index: 1;
+  /* border-bottom: solid 8px #aaa; */
 }
 
 .header{
   width: 100%;
-  height: 50px;
+  height: 40px;
+  /* background-color: red; */
+  /* border-top-left-radius: 50px;
+  border-top-right-radius: 25px; */
+}
+
+.content{
+  width: 100%;
+  height: 380px;
+  margin-top:50px;
+  background-color: #fff;
+
+}
+
+.footer{
+  display:flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 80px;
+  position: absolute;
+  bottom: 0;
+}
+
+.headerlogo{
+  width: 100%;
+  height: 100px;
+  /* border-top-right-radius: 50%;
+  border-top-left-radius: 50%; */
+}
+
+.icondiv{
+  margin-top:-10px;
+  display: flex;
+  justify-content: space-between; /* Center horizontally */
+}
+
+.icon{
+  margin-right: 20px;
+  color:#000;
+}
+
+.title{
+  margin-left: 20px;
+  color:#000;
+  font-size: 20px;
+}
+
+.actionbtn{
   background-color: red;
+  width: 10rem;
+  border:none;
+  border-radius: 50px;
+  height: 40px;
+  cursor:pointer;
+}
+.cancelbtn{
+  margin-left: 50px;
+  background-color: #ffd445;
 }
 
-.conent{
+.confirmbtn{
+  margin-right: 50px;
+  background-color: #fff;
+  border: solid 1px #ffd445;
+}
+
+.betdetails{
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.container{
+
+  padding:30px;
+  border-bottom:solid 1px rgb(204, 204, 204,.3);
+  border-top:solid 1px rgb(204, 204, 204,.3);
+
+}
+
+.table{
+  border:solid .5px #ccc;
+  height: 250px;
+  margin-top: 10px;
+  padding: 5px;
+  color:#ccc;
+}
+
+.small{
   width: 100%;
-  height: 500px;
-  background-color: yellow;
+  height: 40px;
+  background-color: #ffc412;
+  position: absolute;
+  bottom: 0;
 }
-
-.green{
-  width: 100%;
-  height: 50px;
-  background-color: green;
-}
-
 
