--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent black */
+  background-color: rgba(0, 0, 0, 0.3); /* semi-transparent black */
   transition: opacity 0.3s ease, visibility 0.3s ease;
   z-index: 1;
   overflow: none;
@@ -26,15 +26,21 @@
   position: sticky;
   margin-top:60px;
   background-color: white;
+  border-top-left-radius: 30px; /* Apply border radius to top corners */
+  border-top-right-radius: 30px; /* Apply border radius to top corners */
+  border-bottom-left-radius: 30px; /* Apply border radius to top corners */
+  border-bottom-right-radius: 30px; /* Apply border radius to top corners */
+  border-bottom: solid 10px #ffc412;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
   z-index: 1;
 }
 
 .header{
   width: 100%;
   height: 40px;
-  /* background-color: red; */
-  /* border-top-left-radius: 50px;
-  border-top-right-radius: 25px; */
+  background-color: transparent;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
 }
 
 .content{
@@ -55,10 +61,11 @@
 }
 
 .headerlogo{
-  width: 100%;
-  height: 100px;
-  /* border-top-right-radius: 50%;
-  border-top-left-radius: 50%; */
+  display: block; /* Ensure the image is displayed as a block element */
+  width: 100%; /* Optionally, adjust image width to fill the container */
+  height: auto; /* Maintain aspect ratio */
+  border-top-left-radius: 30px; /* Apply border radius to top corners */
+  border-top-right-radius: 30px; /* Apply border radius to top corners */
 }
 
 .icondiv{
