--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-
-
 .overlay {
   position: fixed;
   display: flex;
@@ -8,7 +6,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.3); /* semi-transparent black */
+  background-color: rgba(0, 0, 0, 0.2); /* semi-transparent black */
   transition: opacity 0.3s ease, visibility 0.3s ease;
   z-index: 1;
   overflow: none;
@@ -22,7 +20,7 @@
 
 .modal {
   width: 450px;
-  height: 600px;
+  height: 550px;
   position: sticky;
   margin-top:60px;
   background-color: white;
@@ -30,7 +28,7 @@
   border-top-right-radius: 30px; /* Apply border radius to top corners */
   border-bottom-left-radius: 30px; /* Apply border radius to top corners */
   border-bottom-right-radius: 30px; /* Apply border radius to top corners */
-  border-bottom: solid 10px #ffc412;
+  border-bottom: solid 5px #ffc61c;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
   z-index: 1;
 }
@@ -46,9 +44,9 @@
 .content{
   width: 100%;
   height: 380px;
-  margin-top:50px;
+  margin-top: 30px;
   background-color: #fff;
-
+ 
 }
 
 .footer{
@@ -72,6 +70,7 @@
   margin-top:-10px;
   display: flex;
   justify-content: space-between; /* Center horizontally */
+  cursor:pointer
 }
 
 .icon{
@@ -107,23 +106,24 @@
 .betdetails{
   display: flex;
   justify-content: space-between;
-
 }
 
 .container{
-
   padding:30px;
   border-bottom:solid 1px rgb(204, 204, 204,.3);
   border-top:solid 1px rgb(204, 204, 204,.3);
-
 }
 
 .table{
-  border:solid .5px #ccc;
+  border:solid .5px #ddd;
   height: 250px;
   margin-top: 10px;
   padding: 5px;
   color:#ccc;
+  border-radius:5px;
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
 }
 
 .small{
